--- a/package.json
+++ b/package.json
@@ -1,47 +1,57 @@
 {
-  "name": "ping-pong-dashboard",
+  "name": "wow-classic-level-tracker",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "env-cmd -f .env.local drizzle-kit generate:pg",
+    "db:migrate": "env-cmd -f .env.local tsx ./src/db/migrate.ts",
+    "db:studio": "env-cmd -f .env.local drizzle-kit studio"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.10",
-    "@heroicons/react": "^2.0.17",
-    "@next/bundle-analyzer": "^13.3.0",
-    "@nhost/nhost-js": "^2.2.0",
-    "@types/lodash-es": "^4.17.7",
-    "@types/luxon": "^3.2.0",
-    "@types/node": "18.15.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/recharts": "^1.8.24",
-    "@vercel/analytics": "^0.1.11",
-    "axios": "^1.3.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "google-spreadsheet": "^3.3.0",
-    "graphql": "^16.6.0",
+    "@heroicons/react": "^2.1.1",
+    "@next/bundle-analyzer": "^14.1.3",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^20.11.25",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@types/recharts": "^1.8.29",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/postgres": "^0.7.2",
+    "axios": "^1.6.7",
+    "drizzle-orm": "^0.30.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "google-spreadsheet": "^4.1.1",
     "lodash-es": "^4.17.21",
-    "luxon": "^3.3.0",
-    "next": "13.2.4",
+    "luxon": "^3.4.4",
+    "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-responsive": "^9.0.2",
-    "recharts": "^2.5.0",
+    "recharts": "^2.12.2",
     "simple-oauth2": "^5.0.0",
-    "typescript": "4.9.5"
+    "typescript": "^5.4.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/google-spreadsheet": "^3.3.1",
-    "@types/simple-oauth2": "^5.0.4",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "tailwindcss": "^3.3.1"
+    "@types/simple-oauth2": "^5.0.7",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "autoprefixer": "^10.4.18",
+    "drizzle-kit": "^0.20.14",
+    "env-cmd": "^10.1.0",
+    "pg": "^8.11.3",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.1"
   }
 }
