--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/recharts": "^1.8.29",
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.7.2",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
     "drizzle-orm": "^0.30.1",
     "eslint": "^8.57.0",
